<resources>
    <string name="app_name">KFApp</string>
    <string name="title_activity_login">Sign in</string>

    <string name="alipay">支付宝支付</string>
    <string name="wxpay">微信支付</string>
    <string name="cancel">取消</string>
    <string name="input_nickname">请输入昵称，最长30个字</string>
    <string name="new_address">新增收货人地址</string>

    <!-- Strings related to login -->
    <string name="prompt_account">请输入账号</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_account">请输入正确手机号</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">请输入正确密码</string>
    <string name="error_field_required">账号不能为空</string>
    <string name="action_forgot_pwd">忘记密码?</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
</resources>
